# ontogentelechy

./: CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  pyproject.toml  setup.py
docs/: ONTOGENTELECHY_COMPLETE.md  ONTOGENTELECHY_DESIGN.md  ONTOGENTELECHY_IMPLEMENTATION.md
examples/: basic_usage.py
ontogentelechy/: __init__.py  core.py  examples.py  fitness.py
